# nand2tetris

./: .gitattributes  .gitignore  Cargo.toml  Justfile  LICENSE  LICENSE-MIT  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
hardware/1/: And3Way.hdl  DMux.hdl  Mux.hdl  Mux8Way16.hdl  Or8Way.hdl  Rep16.cmp  Rep16.tst
hardware/2/: ALU.hdl  FullAdder.hdl  Identity.hdl  Identity.tst  Identity16.hdl  Xor16.cmp  Xor16.hdl  Xor16.tst
hardware/3/a/: Bit.hdl  PC.hdl
hardware/3/b/: RAM16K.hdl
hardware/4/fill/: Fill.asm
hardware/4/mult/: Mult.asm
hardware/5/: And3Way.hdl  Computer.hdl  Memory.hdl
install/: Cargo.toml
notes/: bit.cpp  notes.md
projects/01/: And.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Mux8Way16.out
projects/02/: ALU.cmp  ALU.hdl  ALU.out  ALU.tst  Add16.hdl  And3.hdl  Even.hdl  Even3.hdl  FullAdder.hdl  FullAdderNotUsingHalfAdder.hdl  FullAdderNotUsingHalfAdder.tst  Odds.hdl  Or16Way.hdl
projects/1/: And.hdl  And16.hdl  And3Way.out  And3Way.tst  DMux4Way.hdl  DMux8Way.hdl  Mux4Way16.hdl  Or.hdl  Rep16.hdl  Xor.hdl
projects/2/: Add16.hdl  HalfAdder.hdl  Identity.cmp  Identity16.cmp  Identity16.tst  Inc16.hdl
projects/3/a/: And4Way.hdl  And4Way.out  And4Way.tst  Bit.tst  RAM64.hdl  RAM8.hdl
projects/3/b/: RAM4K.hdl  RAM512.hdl
projects/4/fill/: TestFill.asm
projects/5/: And3Way.tst  CPU.hdl
scripts/: create-coursera-submission-zip-pj3.sh  create-coursera-submission-zip-pj4.sh  create-coursera-submission-zip.sh  project1-zip.sh
simulators/: README.md
software/hack-assembler/: Cargo.toml
software/hack-assembler/src/: lib.rs  main.rs
software/jack-compiler/: Cargo.toml
software/jack-compiler/src/: lib.rs  main.rs
