[package]
name = "nukopy-nand2tetris-software"
publish = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
categories.workspace = true

[dependencies]
hack-assembler = { version = "0.0.1", path = "../software/hack-assembler" }
jack-compiler  = { version = "0.0.1", path = "../software/jack-compiler" }

[[bin]]
name = "hack-assembler"
path = "./src/bin/hack-assembler.rs"

[[bin]]
name = "jack-compiler"
path = "./src/bin/jack-compiler.rs"
