[package]
name = "nukopy-hack-assembler"
publish = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
categories.workspace = true

[dependencies]
