[package]
name = "nukopy-jack-compiler"
publish = true
categories = [
    "command-line-interface",
]
keywords = [
    "nand2tetris",
    "jack",
    "jack-compiler",
    "compiler",
]
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
